--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Voces&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Voces&display=swap");
 
 @tailwind base;
 @tailwind components;
